--- a/TimerLab/MainWindow.xaml
+++ b/TimerLab/MainWindow.xaml
@@ -18,25 +18,27 @@
                     <RowDefinition Height="6*"/>
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0">
-                    <Button x:Name="AlarmButton" Grid.Column="0" Background="DarkMagenta" Foreground="White" Cursor="Hand" Padding="20" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Alarm"/>
-                    <Button x:Name="TimerButton" Grid.Column="1" Foreground="Azure" Background="DimGray" Padding="20" Cursor="Wait" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Timer" />
+                    <Button x:Name="AlarmButton" Grid.Column="0" Background="#6D5FB3" Foreground="White" Cursor="Hand" Padding="20" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Alarm"/>
+                    <CheckBox x:Name="CheckAlarm" Grid.Column="0" Click="Alarm_Check"/>
+                    <Button x:Name="TimerButton" Grid.Column="1" Foreground="Azure" Background="#0F1472" Padding="20" Cursor="Wait" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Timer" />
+                    <CheckBox x:Name="CheckTimer" Grid.Column="1" Click="Timer_Check"/>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                 </Grid>
-                <Border Background="DodgerBlue" Grid.Row="1">
+                <Border Background="#172E70" Grid.Row="1">
                     <ScrollViewer>
                         <StackPanel x:Name="TimerStackPanel" Orientation="Vertical">
                             <TextBlock>
-                                <Run FontSize="20" Foreground="Azure" FontWeight="Bold">Press "+" to add TIMER</Run>
+                                <Run FontSize="20" Foreground="#7F9FC3	" FontWeight="Bold">Press "+" to add TIMER</Run>
                             </TextBlock>
                             <Button x:Name="AddTimer" Content="+" Padding="20 20" Margin="90 5" Click="AddTimer_Click" />
                         </StackPanel>
                     </ScrollViewer>
                 </Border>
             </Grid>
-            <Border Background="SeaGreen" Grid.Column="1"></Border>
+            <Border Background="#0B4789" Grid.Column="1"></Border>
             <Grid Grid.Column="1">
                 <Grid Margin="120 150">
                     <Grid>
@@ -50,10 +52,11 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                            <TextBox x:Name="Hours_Text" Grid.Column="0" Text = "00" Padding="0 15 0 0" FontSize = "60" TextAlignment = "Center" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background = "#2568ff"/>
-                            <TextBox x:Name="Minutes_Text" Grid.Column="1" Text = "00" Padding="0 15 0 0" FontSize = "60" TextAlignment = "Center"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background = "#2568ff"/>
-                            <TextBox x:Name="Seconds_Text" Grid.Column="2" Text = "00" Padding="0 15 0 0" FontSize = "60" TextAlignment = "Center"  VerticalAlignment="Stretch " HorizontalAlignment="Stretch" Background = "#2568ff"/>
-                            <TextBox x:Name="timertxt" Grid.Column="0" Margin="0,-105,0,105" Grid.ColumnSpan="3" TextAlignment = "Center"  VerticalAlignment="Stretch " HorizontalAlignment="Stretch" Background = "#2568ff"/>
+                            <TextBox x:Name="Hours_Text" Grid.Column="0" Text = "00" Padding="0 15 0 0" FontSize = "60" TextAlignment = "Center" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF"/>
+                            <TextBox x:Name="Minutes_Text" Grid.Column="1" Text = "00" Padding="0 15 0 0" FontSize = "60" TextAlignment = "Center"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF" />
+                            <TextBox x:Name="Seconds_Text" Grid.Column="2" Text = "00" Padding="0 15 0 0" FontSize = "60" TextAlignment = "Center"  VerticalAlignment="Stretch " HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF"/>
+                            <TextBox x:Name="timertxt" Grid.Column="0" Margin="0,-105,0,105" Grid.ColumnSpan="3"  FontSize = "60" TextAlignment = "Center"  VerticalAlignment="Stretch " HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF" />
+                            
                         </Grid>
                         <Button x:Name="StartButton" Grid.Row="1" Content="START" Margin="70 30" FontSize="30" Click="StartButton_Click" />
                     </Grid>
