--- a/TimerLab/MainWindow.xaml
+++ b/TimerLab/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TimerLab"
         mc:Ignorable="d"
-        Title="MainWindow" Height="550" Width="800">
+        Title="MainWindow" Height="550" Width="800" >
     <Grid>
         <Grid x:Name="timer" Background="White" Margin="5">
             <Grid.ColumnDefinitions>
@@ -33,7 +33,7 @@
                             <TextBlock>
                                 <Run FontSize="20" Foreground="#7F9FC3	" FontWeight="Bold">Press "+" to add TIMER</Run>
                             </TextBlock>
-                            <Button x:Name="AddTimer" Content="+" Padding="20 20" Margin="90 5" Click="AddTimer_Click" />
+                            <Button x:Name="AddTimer" Content="+" Padding="20 20" Margin="90 5" Click="AddTimer_Click"  />
                         </StackPanel>
                     </ScrollViewer>
                 </Border>
@@ -55,10 +55,20 @@
                             <TextBox x:Name="Hours_Text" Grid.Column="0" Text = "00" Padding="0 15 0 0" FontSize = "60" TextAlignment = "Center" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF"/>
                             <TextBox x:Name="Minutes_Text" Grid.Column="1" Text = "00" Padding="0 15 0 0" FontSize = "60" TextAlignment = "Center"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF" />
                             <TextBox x:Name="Seconds_Text" Grid.Column="2" Text = "00" Padding="0 15 0 0" FontSize = "60" TextAlignment = "Center"  VerticalAlignment="Stretch " HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF"/>
-                            
+
                         </Grid>
                         <Button x:Name="StartButton" Grid.Row="1" Content="START" Margin="70 30" FontSize="30" Click="StartButton_Click" />
                     </Grid>
+                </Grid>
+                <Grid Grid.Column="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="520*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBox x:Name="Hrs_Text" Text = "00"  FontSize = "30" TextAlignment = "Center" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF" Margin="370,0,100,459" Grid.Column="1"/>
+                    <TextBox x:Name="Mnt_Text" Text = "00"  FontSize = "30" TextAlignment = "Center"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF" Margin="420,0,50,459" Grid.Column="1" />
+                    <TextBox x:Name="Sec_Text" Text = "00"  FontSize = "30" TextAlignment = "Center"  VerticalAlignment="Stretch " HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF" Margin="470,0,0,459" Grid.Column="1"/>
+
                 </Grid>
             </Grid>
         </Grid>
