--- a/TimerLab/MainWindow.xaml
+++ b/TimerLab/MainWindow.xaml
@@ -19,9 +19,7 @@
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="0">
                     <Button x:Name="AlarmButton" Grid.Column="0" Background="#6D5FB3" Foreground="White" Cursor="Hand" Padding="20" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Alarm" Click="AddAlarm_Click"/>
-                    
-                    <Button x:Name="TimerButton" Grid.Column="1" Foreground="Azure" Background="#0F1472" Padding="20" Cursor="Wait" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Timer"  Click="AddTimer_Click" />
-                    
+                    <Button x:Name="TimerButton" Grid.Column="1" Foreground="Azure" Background="#0F1472" Padding="20" Cursor="Hand" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Timer"  Click="AddTimer_Click" />
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
@@ -52,9 +50,14 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition/>
                             </Grid.ColumnDefinitions>
-                            <TextBox x:Name="Hours_Text" Grid.Column="0" Text = "00" Padding="0 15 0 0" FontSize = "60" TextAlignment = "Center" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF"/>
-                            <TextBox x:Name="Minutes_Text" Grid.Column="1" Text = "00" Padding="0 15 0 0" FontSize = "60" TextAlignment = "Center"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF" />
-                            <TextBox x:Name="Seconds_Text" Grid.Column="2" Text = "00" Padding="0 15 0 0" FontSize = "60" TextAlignment = "Center"  VerticalAlignment="Stretch " HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF"/>
+                            <TextBox x:Name="Hours_Text" Grid.Column="0" Text = "00" Padding="0 15 0 0" FontSize = "25" TextAlignment = "Center" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF"/>
+                            <TextBox x:Name="Minutes_Text" Grid.Column="1" Text = "00" Padding="0 15 0 0" FontSize = "25" TextAlignment = "Center"  VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF" />
+                            <TextBox x:Name="Seconds_Text" Grid.Column="2" Text = "00" Padding="0 15 0 0" FontSize = "25" TextAlignment = "Center"  VerticalAlignment="Bottom " HorizontalAlignment="Stretch" Background = "#3D7DC4" Foreground="#9DB6BF"/>
+
+                            <TextBox x:Name="AlarmHours_Text" Grid.Column="0" Text = "00" Padding="0 15 0 0" FontSize = "25" TextAlignment = "Center" VerticalAlignment="Top" HorizontalAlignment="Stretch" Background = "#6D5FB3" Foreground="#9DB6BF"/>
+                            <TextBox x:Name="AlarmMinutes_Text" Grid.Column="1" Text = "00" Padding="0 15 0 0" FontSize = "25" TextAlignment = "Center" VerticalAlignment="Top" HorizontalAlignment="Stretch" Background = "#6D5FB3" Foreground="#9DB6BF"/>
+                            <TextBox x:Name="AlarmSeconds_Text" Grid.Column="2" Text = "00" Padding="0 15 0 0" FontSize = "25" TextAlignment = "Center" VerticalAlignment="Top" HorizontalAlignment="Stretch" Background = "#6D5FB3" Foreground="#9DB6BF"/>
+
                         </Grid>
                         <Button x:Name="StartButton" Grid.Row="1" Content="START" FontSize="30" Margin="140 0 0 0" Click="StartButton_Click"  />
                         <Button x:Name="SaveButton" Grid.Row="1" Content="SAVE"  FontSize="30" Margin="0 0 140 0" Click="SaveButton_Click"  />
